karabiner/k8s/kubeadm/wp2/wp-kic-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-kic-dep
  namespace: nginx-ingress

spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-kic-dep

  template:
    metadata:
      labels:
        app: wp-kic-dep

    spec:
      serviceAccountName: nginx-ingress

      # use host network
      hostNetwork: true

      containers:
      - image: nginx/nginx-ingress:2.2-alpine
        name: nginx-ingress
        args:
          - -ingress-class=wp-ink
